src/core/Claroline/PluginBundle/Tests/stub/plugin/Invalid/NonYamlRoutingResource1/InvalidNonYamlRoutingResource1.php
<?php

namespace Invalid\NonYamlRoutingResource1;

use Claroline\PluginBundle\AbstractType\ClarolinePlugin;

class InvalidNonYamlRoutingResource1 extends ClarolinePlugin
{
    public function getRoutingResourcesPaths()
    {
        $nonYamlPath = __DIR__
            . DIRECTORY_SEPARATOR
            . 'Resources'
            . DIRECTORY_SEPARATOR
            . 'config'
            . DIRECTORY_SEPARATOR
            . 'routing.foo';

        return $nonYamlPath;
    }
}